--- a/projects/son-hsp-lowersp-vtu/project.yml
+++ b/projects/son-hsp-lowersp-vtu/project.yml
@@ -1,8 +1,8 @@
 descriptor_extension: yml
 package:
-  description: SONATA HSP LOWER SP VTC
+  description: SONATA HSP LOWER SP VTU
   maintainer: Thomas Soenen, imec, thomas.soenen@ugent.be
-  name: "son-hsp-lowersp-vtc"
+  name: "son-hsp-lowersp-vtu"
   vendor: "eu.sonata-nfv"
   version: "0.1"
 version: '0.5'
