--- a/projects/son-hsp-lowersp-vtu/sources/nsd/son-hsp-lowersp-vtu.yml
+++ b/projects/son-hsp-lowersp-vtu/sources/nsd/son-hsp-lowersp-vtu.yml
@@ -48,6 +48,6 @@ virtual_links:
   - id: "vlvccout"
     connectivity_type: "E-Line"
     connection_points_reference:
-      - "vnf_vtu:cpoutput"
+      - "vnf_vtu:cpinput"
       - "nscpoutput"
 
