NSD and VNFD vendor should be equal for the HSP scenario

--- a/projects/son-hsp-lowersp-vtu/sources/nsd/son-hsp-lowersp-vtu.yml
+++ b/projects/son-hsp-lowersp-vtu/sources/nsd/son-hsp-lowersp-vtu.yml
@@ -1,6 +1,6 @@
 descriptor_version: "1.0"
 
-vendor: "eu.sonata-nfv.service-descriptor"
+vendor: "eu.sonata-nfv"
 name: "son-hsp-lowersp-vtu"
 version: "0.9.1"
 author: "SONATA Consortium"
