--- a/projects/son-hsp-lowersp-vtu/sources/nsd/son-hsp-lowersp-vtu.yml
+++ b/projects/son-hsp-lowersp-vtu/sources/nsd/son-hsp-lowersp-vtu.yml
@@ -1,8 +1,8 @@
 descriptor_version: "1.0"
 
 vendor: "eu.sonata-nfv"
-name: "son-hsp-lowersp-vtu"
-version: "0.9.1"
+name: "vtu-vnf"
+version: "0.5"
 author: "SONATA Consortium"
 description: "Descriptor to package vtu vnf"
 ##
